Fix syntax highlighting when preview is in dark mode (#1668)

--- a/src/main/resources/org/asciidoc/intellij/editor/javafx/darcula.css
+++ b/src/main/resources/org/asciidoc/intellij/editor/javafx/darcula.css
@@ -1,7 +1,4 @@
 #content>h1:first-child:not([class]), body {background-color: #45494a;color: #bbbbbb}
-.content > pre {
-    filter: invert(90%) hue-rotate(180deg);
-}
 
 a, a:hover, a:focus { color: #589df6; }
 
@@ -20,7 +17,6 @@ tbody tr th,tbody tr th p,tfoot tr th,tfoot tr th p{color: #bbbbbb}
 /* was: rgba(0,0,0,.85) */
 .paragraph.lead>p,#preamble>.sectionbody>.paragraph:first-of-type p{color: #bbbbbb}
 .quoteblock blockquote,.quoteblock blockquote p{color: #bbbbbb}
-.verseblock pre{color: #bbbbbb}
 #content>h1:first-child:not([class]){color: #bbbbbb}
 #header .details br+span.author:before{color: #bbbbbb}
 #header .details span.email a{color: #bbbbbb}
@@ -35,7 +31,9 @@ blockquote cite a,blockquote cite a:visited {color: #bbbbbb}
 .quoteblock .attribution cite,.verseblock .attribution cite{color: #bbbbbb}
 
 /* was: rgba(0,0,0,.9) */
-code {filter: invert(90%) hue-rotate(180deg);}
+:not(pre) > code, pre {
+    filter: invert(90%) hue-rotate(180deg);
+}
 
 /* was: f8f8f7 */
 table:not(.linenotable):not(.CodeRay) tbody tr{background:#45494a}
